Fix margin gap on main page

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,3 +1,9 @@
+html, body {
+    margin: 0;
+    padding: 0;
+    background-color: #161616;
+  }
+
 #nav-box {
     list-style-type: none;
     margin: 0; 
@@ -5,7 +11,6 @@
     display: flex; 
     justify-content: space-between;
     align-items: center;
-    background-color: black;
 }
 
 #nav {
@@ -23,14 +28,14 @@
     display: inline-block;
     color: white;
     margin-right: 90px;
-    font-size: 14px;
+    font-size: 15px;
 }
 
 #nav-auth li {
     display: inline-block;
     color: white;
     margin-left: 90px;
-    font-size: 14px;
+    font-size: 15px;
 }
 
 .poppins-regular {
@@ -46,7 +51,7 @@
 }
 
 #nav #logo {
-    font-size: 17px;
+    font-size: 18px;
 }
 
 .backdrop-container {
@@ -69,7 +74,7 @@
 .backdrop-button {
     background-color: #0066ff;
     border: none;
-    border-radius: 4px;
+    border-radius: 6px;
     color: white;
     padding: 15px 30px;
     text-align: center;
@@ -81,10 +86,11 @@
 }
 
 .backdrop-content h1 {
-    font-size: 60px;
-    line-height: 75px;
+    font-size: 70px;
+    line-height: 85px;
+    display: inline-block;
 }
 
 .backdrop-content p {
-    font-size: 18px;
+    font-size: 19px;
 }
